stylesheets/style.css
@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@300;900&display=swap');

h1, h2, h3, h4, h5, h6, p, q, a, #navbar, #header, #footer, #comment-area, #typewriter, .content, .content2, .button {
    font-family: 'Merriweather', serif;
}

body {
    margin: 0;
    padding: 0;
    background: #2c0016;
    text-align: center;
}

#navbar {
    width: 100%;
    background-color: #850042;
    overflow: auto;
    z-index: 999;
}
  
#navbar a {
    float: right;
    padding: 13px 0px 13px;
    width: 120px;
    color: rgb(241, 241, 241);
    text-decoration: none;
    font-size: 15px;
}
  
#navbar a:hover {
    background-color: #000;
}
  
#navbar a-Active {
    cursor:pointer;
    float: left;
    color: rgb(241, 241, 241);
    background-color: #c95297;
    width: 120px;
    font-size: 15px;
}
  
.sticky {
    position: -webkit-sticky;
    position: sticky;
    top: 0px;
}  

#header {
    text-align: center;
    font-size: medium;
    padding: 3% 0% 4%;
    background-image: url("../images/header-bg.jpeg");
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
}

#default {
    padding: 2% 0% 40%;
}

#main {
    padding: 1% 0% 3%;
}

.main-container {  
    position: absolute;
    left: 50%;
    top: 45%;
    transform: translate(-50%, -50%);
    height: 55%;
    width: 40%;
    background: #e0e0e0;
    opacity: .85;
    overflow: hidden;
    border-radius: 40px;
    box-shadow: 0 0 20px 8px #8b8b8b;
}

.recipe-container {
    padding: 0% 5% 0%;
    margin-top: 3%;  
    margin-left: 10%;
    height: fit-content;
    width: 70%;
    background: #e0e0e0;
    opacity: .9;
    overflow: hidden;
    border-radius: 30px;
    box-shadow: 0 0 20px 8px #8b8b8b;
}

.login-container {  
    position: absolute;
    left: 50%;
    top: 45%;
    transform: translate(-50%, -50%);
    height: 62%;
    width: 35%;
    background: #e0e0e0;
    opacity: .85;
    overflow: hidden;
    border-radius: 40px;
    box-shadow: 0 0 20px 8px #8b8b8b;
}

.review-container {  
    position: absolute;
    left: 50%;
    top: 46%;
    transform: translate(-50%, -50%);
    height: 65%;
    width: 35%;
    background: #e0e0e0;
    opacity: .85;
    overflow: hidden;
    border-radius: 40px;
    box-shadow: 0 0 20px 8px #8b8b8b;
}

hr {
    opacity: 0.75;
    margin: 0;
    padding: 0;
    border: 1.5px solid #c95297;
}

.more-container {
    overflow: hidden;
    max-height: fit-content;
}

.more-thumb {
    float: left;
    display: block;
    background: url("../images/more.jpeg");
    background-repeat: no-repeat;
    background-size: cover;
    width: 50%;
    min-height: 400px;
}

.more-content {
    margin: 5% 0% 15% 40%;
}

#more-text-change {
    margin-top: 10%;
}

.clients-container {
    overflow: hidden;
    max-height: fit-content;
}

.clients-thumb {
    float: right;
    display: block;
    background: url("../images/clients.jpeg");
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    width: 50%;
    min-height: 400px;
}

.clients-content {
    margin: 5% 50% 5% 0%;
}

.clients-title {
    font-weight: bold;
}

.comments-container {
    position: relative;
}
  
.comment {
    display: none;
    padding: 10% 8% 0% 8%;
    text-align: center;
}

.dot-container {
    text-align: center;
    padding-top: 20px;
}

.dot {
    cursor: pointer;
    height: 15px;
    width: 15px;
    margin: 0 2px;
    background-color: #6e6e6e;
    border-radius: 50%;
    display: inline-block;
    transition: background-color 0.6s ease;
    opacity: 0.4;
}
  
.active, .dot:hover {
    background-color: #ff6ac1;
    opacity: 0.9;
}
  
q {
    font-size: medium;
    font-style: italic;
}
  
.author {
    font-size: small;
    font-style: italic;
}

.requests-container {
    overflow: hidden;
    max-height: 30%;
}

.requests-content {
    margin: 3% 0% 5% 0%;
}

.purple {
    color: #c70074;
}

.white {
    color: rgb(211, 211, 211);
}

.light-purple {
    color: #da3796;
}

.white-pink {
    color: #e4a1c8;
}

.logo {
    border-radius: 50%;
    border: 2px solid #831d58;
    max-width: 50%;  
    height: 30%; 
    opacity: 1;
}

.food {
    margin-top: 30px;
    border-radius: 15%;
    border: 2px solid #831d58;
    width: 250px;
    height: 220px; 
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;  
}

.gif {
    width: 300px;
    height: 270px; 
}

.reduced {
    max-width: 32%;
}

.logo:hover {
    opacity: .85;
}

.content {
    position: absolute;
    top: 50%;
    transform: translatey(-50%);
    text-align: center;
    color: #831d58;
    padding: 0% 15% 0%;
}

.recipe-content {
    text-align: center;
    padding: 0% 2% 4%;
}

.content2 {
    position: absolute;
    top: 49%;
    transform: translatey(-50%);
    text-align: center;
    color: #831d58;
    padding: 0% 30% 0%;
}

#see-more {
    padding-top: 39%;
    color: rgb(211, 211, 211);
    font-size: 0.8em;
    padding-bottom: 2%;
}
  
.stage {
    display: flex;
    width: 100%;
}

.box {
    align-self: center;
    animation-duration: 4s;
    animation-iteration-count: infinite;
    background-image: url("../images/scroll-down.png");
    height: 30px;
    background-repeat: no-repeat;
    margin: 0 auto 0 auto;
    transform-origin: bottom;
    width: 60px;
}

.bounce-4 {
    animation-name: bounce-4;
    animation-timing-function: ease;
}
  
@keyframes bounce-4 {
    0%   { transform: scale(1,1)    translateY(0); }
    10%  { transform: scale(1.1,.9) translateY(0); }
    30%  { transform: scale(.9,1.1) translateY(35px); }
    50%  { transform: scale(1,1)    translateY(0); }
    100% { transform: scale(1,1)    translateY(0); }
}

#footer {
    text-align: center;
    font-size: smaller;
    padding: 1.2% 0% 1.2%;
    width: 100%;
    background-color: #1d1d1d;
    color: rgb(241, 241, 241);
}

.item.social {
    margin-top: 5px;
    text-align: center;
}
/* ... */

